--- a/src/models/CatApi/cat.css
+++ b/src/models/CatApi/cat.css
@@ -1,5 +1,5 @@
 .cat-container {
-  @apply relative mx-auto sm:absolute top-8 sm:top-12 lg:top-12 xl:top-20 sm:right-16 xl:right-32 sm:text-left max-w-full;
+  @apply relative mx-auto sm:absolute top-16 sm:top-12 lg:top-12 xl:top-20 sm:right-16 xl:right-32 sm:text-left max-w-full;
 }
 
 .cat-container h5 {
